--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -42,6 +42,7 @@
     "pg": "^8.14.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "slugify": "^1.6.6",
     "streamifier": "^0.1.1",
     "typeorm": "^0.3.21"
   },
