--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,7 +20,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "seed:admin":"ts-node -r tsconfig-paths/register src/utils/seeder.ts",
-    "seed:posts": "ts-node -r tsconfig-paths/register  src/utils/seed-posts.ts"
+    "seed:posts": "ts-node -r tsconfig-paths/register  src/utils/seed-posts.ts",
+    "seed:blogs": "ts-node -r tsconfig-paths/register  src/utils/seed-blogs.ts"
   },
   "dependencies": {
     "@faker-js/faker": "^9.6.0",
